@@ -1,0 +1,6 @@
+This is a dynamic README file which uses HStringTemplate.
+
+The time is $time$.
+
+Thanks for reading!
+
